--- a/app/src/main/res/layout/component_button_refresh.xml
+++ b/app/src/main/res/layout/component_button_refresh.xml
@@ -9,7 +9,7 @@
         android:layout_width="120dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        android:background="@drawable/shape_button_refresh.xml"
+        android:background="@drawable/shape_button_refresh"
         android:text="@string/label_refresh"
         android:textColor="@color/white" />
 </LinearLayout>
